# poc-amp

./: .env.example  .gitignore  POC_Logic_Imp.md  docker-compose.dev.yml  docker-compose.yml
amp-instrumentation/: README.md  pyproject.toml
amp-instrumentation/amp_instrumentation/: __init__.py  interceptor.py  recovery.py  registry.py
backend/: .air.toml  Dockerfile  go.mod  go.sum  main.go
backend/api/: interceptor_server.go  router.go
backend/config/: config.go
backend/models/: agent.go  compensation.go  transaction.go
backend/services/: agent.go  docker.go  git.go  recovery.go  suggestion.go
backend/store/: compensation.go  postgres.go
db/migrations/: 001_create_agents.sql  002_create_compensation_mappings.sql  003_create_ebpf_tables.sql
docs/: EBPF_AUTO_INSTRUMENTATION.md  envoy-implementation-march-4.md  ip-tables-implementation.md
ebpf-agent/: Dockerfile  README.md  go.mod  go.sum
ebpf-agent/bpf/: http_capture.c  vmlinux.h
ebpf-agent/cmd/: main.go
envoy/: envoy.yaml  generate_certs.sh  iptables-init.sh
envoy/certs/: ca.crt  ca.key  ca.srl  openssl.cnf  server.crt  server.csr  server.key
example/: .env.example  README.md  main.py  requirements.txt
example-travel-agent/: .env.example  README.md  main.py  requirements.txt
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AgentCard.tsx  AgentForm.tsx  CompensationMappings.tsx  StatusBadge.tsx
frontend/lib/: api.ts
proto/v1/: interceptor.pb.go  interceptor.proto  interceptor_grpc.pb.go
(+15 files in other folders)
