[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amp-instrumentation"
version = "0.1.0"
description = "Agent instrumentation library for AMP platform - tool interception, transaction logging, and compensation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AMP Team"}
]
dependencies = [
    "requests>=2.28.0",
    "wrapt>=1.14.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0"]

[tool.setuptools.packages.find]
where = ["."]
